dom/events/ContentEventHandler.h
@@ -264,8 +264,8 @@ protected:
   nsresult GetStartFrameAndOffset(const nsRange* aRange,
                                   nsIFrame*& aFrame,
                                   int32_t& aOffsetInFrame);
-  // Convert the frame relative offset to the root frame of the root presContext
-  // relative offset.
+  // Convert the frame relative offset to be relative to the root frame of the
+  // root presContext (but still measured in appUnits of aFrame's presContext).
   nsresult ConvertToRootRelativeOffset(nsIFrame* aFrame,
                                        nsRect& aRect);
   // Expand aXPOffset to the nearest offset in cluster boundary. aForward is
